Add Fish Tacos Recipe
Added an img folder and added the fishtacos.png file in there. Also
updated the fishtacos.html page to include the recipe, ingredients,
headings, and the image itself.

--- a/recipes/fishtacos.html
+++ b/recipes/fishtacos.html
@@ -7,6 +7,40 @@
 </head>
 <body>
     <h1>Fish Tacos</h1>
-    <a href="../index.html">Home</a>
+    <img src="./img/fishtacos.png">
+    <h3>Description</h3>
+        <p>This is a delicious and simple meal using tilapia to create an incredibly tasty treat.</p>
+        <p>I like to add some spicy peppers in there, so the recipe calls for jalapenos, but try to
+        make them spicy ones. The spicier jalapenos tend to have the dried striations down their bodies.
+        You can also use red jalapenos, but these tend to be significantly spicier, so be warned.
+        </p>
+
+    <h3>Ingredients</h3>
+        <ul>
+            <li>1lb fresh tilapia fillets;</li>
+            <li>1 tbsp Paleo cooking fat; (i.e. garlic olive oil)</li>
+            <li>1 medium onion, chopped;</li>
+            <li>4 cloves garlic, minced;</li>
+            <li>1 or 2 jalapeño pepper(s), finely chopped;</li>
+            <li>2 cups tomatoes, diced;</li>
+            <li>1/4 cup fresh cilantro, finely chopped;</li>
+            <li>3 tbsp lime juice;</li>
+            <li>Sea salt and freshly cracked black pepper to taste;</li>
+            <li>1 avocado, sliced; (for garnish)</li>
+            <li>Tortilla Shells</li>
+        </ul>    
+    
+    <h3>Steps</h3>
+        <ol>
+            <li>In a large skillet over a medium-high heat, combine the cooking fat with onions.
+                Cook until the onions are soft and translucent in color. Add garlic until fragrant.</li>
+            <li>Add the tilapia and allow the fillets to cook for 3 to 4 minutes on one side prior
+                 to flipping. As the fish begins to cook through, use a fork to break it apart into 
+                 flaky pieces.</li>
+            <li>Add the jalapeno pepper, tomatoes, cilantro and lime juice to the mix and then season 
+                with salt and pepper to taste. Cook for 5 minutes before removing from heat.</li>
+        </ol>
+
+        <a href="../index.html">Home</a>
 </body>
 </html>
