Add Chili Garlic Shrimp Page and Image

--- a/recipes/fishtacos.html
+++ b/recipes/fishtacos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Fish Tacos</h1>
-    <img src="./img/fishtacos.png">
+    <img src="../img/fishtacos.png" alt="Fish Tacos" height="297" width="466">
     <h3>Description</h3>
         <p>This is a delicious and simple meal using tilapia to create an incredibly tasty treat.</p>
         <p>I like to add some spicy peppers in there, so the recipe calls for jalapenos, but try to
