--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/fishtacos.html">Fish Tacos</a>
+    <ul>
+        <li><a href="./recipes/fishtacos.html">Fish Tacos</a></li>
+        <li><a href="./recipes/chiligarlicshrimp.html">Chili Garlic Shrimp</a></li>
+        <li><a href="./recipes/irishbreadpudding.html">Irish Bread Pudding and Whiskey Sauce</a></li>
+    </ul>
 </body>
 </html>
